@@ -55,14 +55,14 @@ public class SelectByPrimaryKeyMethodGenerator extends AbstractDAOElementGenerat
 
             sb.setLength(0);
             sb.append(keyType.getShortName());
-            sb.append(" key = new "); //$NON-NLS-1$
+            sb.append(" _key = new "); //$NON-NLS-1$
             sb.append(keyType.getShortName());
             sb.append("();"); //$NON-NLS-1$
             method.addBodyLine(sb.toString());
 
             for (IntrospectedColumn introspectedColumn : introspectedTable.getPrimaryKeyColumns()) {
                 sb.setLength(0);
-                sb.append("key."); //$NON-NLS-1$
+                sb.append("_key."); //$NON-NLS-1$
                 sb.append(JavaBeansUtil.getSetterMethodName(introspectedColumn
                         .getJavaProperty()));
                 sb.append('(');
@@ -81,7 +81,7 @@ public class SelectByPrimaryKeyMethodGenerator extends AbstractDAOElementGenerat
         sb.append(") "); //$NON-NLS-1$
         sb.append(daoTemplate.getQueryForObjectMethod(introspectedTable
                 .getIbatis2SqlMapNamespace(),
-                introspectedTable.getSelectByPrimaryKeyStatementId(), "key")); //$NON-NLS-1$
+                introspectedTable.getSelectByPrimaryKeyStatementId(), "_key")); //$NON-NLS-1$
         method.addBodyLine(sb.toString());
         method.addBodyLine("return record;"); //$NON-NLS-1$
 
@@ -117,7 +117,7 @@ public class SelectByPrimaryKeyMethodGenerator extends AbstractDAOElementGenerat
         if (introspectedTable.getRules().generatePrimaryKeyClass()) {
             FullyQualifiedJavaType type = new FullyQualifiedJavaType(introspectedTable.getPrimaryKeyType());
             importedTypes.add(type);
-            method.addParameter(new Parameter(type, "key")); //$NON-NLS-1$
+            method.addParameter(new Parameter(type, "_key")); //$NON-NLS-1$
         } else {
             for (IntrospectedColumn introspectedColumn : introspectedTable.getPrimaryKeyColumns()) {
                 FullyQualifiedJavaType type = introspectedColumn.getFullyQualifiedJavaType();
